测试硬件+模型

--- a/test.ipynb
+++ b/test.ipynb
@@ -38,12 +38,68 @@
    "execution_count": 1
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-16T06:06:37.942916Z",
+     "start_time": "2024-12-16T06:06:35.260935Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "\n",
+    "from ultralytics import settings\n",
+    "from ultralytics import YOLO\n",
+    " \n",
+    "# View all settings\n",
+    "print(settings)\n",
+    " \n",
+    "# Return a specific setting\n",
+    "value = settings[\"runs_dir\"]\n",
+    "print(value)"
+   ],
+   "id": "8b94e7f726399054",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating new Ultralytics Settings v0.0.6 file  \n",
+      "View Ultralytics Settings with 'yolo settings' or at 'C:\\Users\\75980\\AppData\\Roaming\\Ultralytics\\settings.json'\n",
+      "Update Settings with 'yolo settings key=value', i.e. 'yolo settings runs_dir=path/to/dir'. For help see https://docs.ultralytics.com/quickstart/#ultralytics-settings.\n",
+      "JSONDict(\"C:\\Users\\75980\\AppData\\Roaming\\Ultralytics\\settings.json\"):\n",
+      "{\n",
+      "  \"settings_version\": \"0.0.6\",\n",
+      "  \"datasets_dir\": \"F:\\\\AI\\\\mobile1\\\\datasets\",\n",
+      "  \"weights_dir\": \"weights\",\n",
+      "  \"runs_dir\": \"runs\",\n",
+      "  \"uuid\": \"0544fa6b0c17394abfa13724314c3874a45d7fb927575b4618f193de3b1a2d99\",\n",
+      "  \"sync\": true,\n",
+      "  \"api_key\": \"\",\n",
+      "  \"openai_api_key\": \"\",\n",
+      "  \"clearml\": true,\n",
+      "  \"comet\": true,\n",
+      "  \"dvc\": true,\n",
+      "  \"hub\": true,\n",
+      "  \"mlflow\": true,\n",
+      "  \"neptune\": true,\n",
+      "  \"raytune\": true,\n",
+      "  \"tensorboard\": true,\n",
+      "  \"wandb\": false,\n",
+      "  \"vscode_msg\": true\n",
+      "}\n",
+      "runs\n"
+     ]
+    }
+   ],
+   "execution_count": 2
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "8b94e7f726399054"
+   "id": "b98de89e9ab821ca"
   }
  ],
  "metadata": {
