--- a/test.ipynb
+++ b/test.ipynb
@@ -94,12 +94,48 @@
    "execution_count": 2
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-16T07:01:48.271477Z",
+     "start_time": "2024-12-16T07:01:48.071246Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import cv2\n",
+    "from PIL import Image\n",
+    "from ultralytics import YOLO\n",
+    "\n",
+    "# Load a pretrained YOLO11n model\n",
+    "model = YOLO(\"yolo11n.pt\")\n",
+    "\n",
+    "# Read an image using OpenCV\n",
+    "source = cv2.imread(\"./dataset/test/Baidu_0003.jpeg\")\n",
+    "\n",
+    "# Run inference on the source\n",
+    "results = model(source)  # list of Results objects\n"
+   ],
+   "id": "b98de89e9ab821ca",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "0: 640x448 1 remote, 1 cell phone, 15.7ms\n",
+      "Speed: 2.1ms preprocess, 15.7ms inference, 1.0ms postprocess per image at shape (1, 3, 640, 448)\n"
+     ]
+    }
+   ],
+   "execution_count": 4
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "b98de89e9ab821ca"
+   "id": "11d8f8718e78103e"
   }
  ],
  "metadata": {
