--- a/test.ipynb
+++ b/test.ipynb
@@ -107,13 +107,7 @@
     "from ultralytics import YOLO\n",
     "\n",
     "# Load a pretrained YOLO11n model\n",
-    "model = YOLO(\"yolo11n.pt\")\n",
-    "\n",
-    "# Read an image using OpenCV\n",
-    "source = cv2.imread(\"./dataset/test/Baidu_0003.jpeg\")\n",
-    "\n",
-    "# Run inference on the source\n",
-    "results = model(source)  # list of Results objects\n"
+    "model = YOLO(\"yolo.yaml\").load('yolo11n.pt')\n"
    ],
    "id": "b98de89e9ab821ca",
    "outputs": [
@@ -137,7 +131,7 @@
     }
    },
    "cell_type": "code",
-   "source": "print(\"123\")",
+   "source": "",
    "id": "11d8f8718e78103e",
    "outputs": [
     {
