临时代码。基本完工

--- a/test.ipynb
+++ b/test.ipynb
@@ -107,7 +107,9 @@
     "from ultralytics import YOLO\n",
     "\n",
     "# Load a pretrained YOLO11n model\n",
-    "model = YOLO(\"yolo.yaml\").load('yolo11n.pt')\n"
+    "model = YOLO(\"yolo.yaml\").load('yolo11n.pt')\n",
+    "results = model.train(data='./dataset/train',epochs=30,workers = 0)\n",
+    "results = model.val()"
    ],
    "id": "b98de89e9ab821ca",
    "outputs": [
